rendered/envs/friclu/yummydocs/deployment-mkdocs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: mkdocs
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: mkdocs
    app.kubernetes.io/version: 0.1.0
    helm.sh/chart: mkdocs-0.1.0
  name: mkdocs
  namespace: fritzgpt
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: mkdocs
      app.kubernetes.io/name: mkdocs
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: mkdocs
        app.kubernetes.io/name: mkdocs
    spec:
      containers:
        - args:
            - --dev-addr
            - 0.0.0.0:8000
          command:
            - mkdocs
            - serve
          env: []
          image: ghcr.io/fritzduchardt/mkdocs:main
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: http
          name: mkdocs
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources: null
          volumeMounts:
            - mountPath: /docs
              name: docs
      nodeSelector:
        kubernetes.io/hostname: friclu-1
      volumes:
        - hostPath:
            path: /volumes/syncthing/BubaFritzShare/private
          name: docs
